--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -15,5 +15,5 @@ main:
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
-    url: uploads/resume.pdf
+    url: uploads/cv_danilomedeiros.pdf
     weight: 30
