--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,8 +8,8 @@ main:
     url: '#about'
     weight: 10
 
-  - name: Publications
-    url: '#publications'
+  - name: Research
+    url: '#research'
     weight: 20
 
 # Link to a PDF of your resume/CV from the menu.
