--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,9 +6,9 @@
 # Appearance
 
 appearance:
-  theme_day: dark
-  theme_night: dark
-  font: dark
+  theme_day: rose
+  theme_night: rose
+  font: rose
   font_size: M
 
 # SEO
